--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,6 +22,7 @@ body {
   color: var(--secondary-dark);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  padding-inline:5px;
 }
 
 a:hover {
